genel guncelleme yapildi.